Edited wiki page through web user interface.

--- a/wiki/MigrationsUsingSchemalessNoSql.wiki
+++ b/wiki/MigrationsUsingSchemalessNoSql.wiki
@@ -54,10 +54,10 @@ public class BlogPostComment
 === The new schema ===
 The 'new version' contains most changes you are likely to encounter in normal app development:
   * Added, removed and renamed fields
-  * Non-destructive change of `int` fields into `long` and `double` fields
-  * Change of a strongly-typed `BlogPostComment` type into a loosely-typed string Dictionary
+  * Non-destructive change of `int` into `long` and `double` fields
+  * Changed a strongly-typed `BlogPostComment` type into a loosely-typed string Dictionary
   * Introduced a new enum type
-  * Added a new nullable calculated value
+  * Added a nullable calculated field
 {{{
 public class BlogPost
 {
