Edited wiki page through web user interface.

--- a/wiki/RedisClientReleaseNotes.wiki
+++ b/wiki/RedisClientReleaseNotes.wiki
@@ -10,8 +10,8 @@ Other noteworthy mentions:
   * Issues identified in some hash commands resulted in more tests and fixes. -- thanks for reporting 
 
 New API methods:
-  * GetAllWithScoresFromSortedSet 
-  * Sort API has been overhauled to allow for simpler opt-in usage.
+  * *GetAllWithScoresFromSortedSet* 
+  * *Sort* has been overhauled to allow for simpler opt-in usage.
 
 = Redis Client v1.14 Release Notes =
 This release brings the client up to date with v1.3.9 of the redis-server with the following new operations included:
