Edited wiki page through web user interface.

--- a/wiki/RedisClientReleaseNotes.wiki
+++ b/wiki/RedisClientReleaseNotes.wiki
@@ -2,7 +2,7 @@
 Latest release notes for the latest version of the c# [ServiceStackRedis ServiceStack.Redis client].
 
 = Redis Client v1.18 Release Notes =
-This release moves the entire client over to use the new binary safe Redis wire protocol so now all arguments including keys are binary safe strings.
+This release moves the entire client over to use the new binary safe Redis wire protocol so now all arguments including keys are binary safe strings. Most new Redis operations available in the latest version of redis-server v1.3.10 have been implemented.
 
 Other noteworthy mentions:
   * *AcquireLock* with built in backoff-sleep-multiplier was added on both [IRedisClient] and [IRedisTypedClient] to provide an elegant way to achieve application level locks.  
@@ -10,10 +10,10 @@ Other noteworthy mentions:
   * Issues identified in some hash commands resulted in more tests and fixes. -- thanks for reporting 
 
 New or changed API methods:
-  * *GetAllWithScoresFromSortedSet* 
-  * *Sort* has been overhauled to allow for simpler opt-in usage.
   * *Append* / *Substring* string operations requiring v1.3.10 redis-server
   * *SetString* with TimeOut now uses the more efficient *SetEx* operation
+  * *GetAllWithScoresFromSortedSet* 
+  * *Sort* has been overhauled to allow for simpler opt-in usage.
 
 = Redis Client v1.14 Release Notes =
 This release brings the client up to date with v1.3.9 of the redis-server with the following new operations included:
