Edited wiki page through web user interface.

--- a/wiki/RedisPubSub.wiki
+++ b/wiki/RedisPubSub.wiki
@@ -1,5 +1,5 @@
 #labels Redis,NoSQL,PubSub,Publish,Subscribe,Messaging
-#This page shows how to use [ServiceStackRedis Service Stack's C# Redis Client] to take advantage of the Publish/Subscribe messaging paradigm built into Redis to develop high-performance network communications.
+This page shows how to use [ServiceStackRedis Service Stack's C# Redis Client] to take advantage of the Publish/Subscribe messaging paradigm built into [http://code.google.com/p/redis/ Redis] to develop high-performance network communications.
 
 = Publish/Subscribe messaging pattern in Redis =
 Redis is largely recognized as the most efficient NoSQL solution to manage rich data structures, providing the data source to power stateless back-end app servers. What a lot of people don't know is that it also has a number of characteristics that also make it a prime candidate to develop high-performance networking solutions with. Probably its most noteworthy feature in this area to date, is its built-in Publishing / Subscribe / Messaging support which enables a new range of elegant comet-based and high performance networking solutions to be developed.
